# dodge-ball

./: .gitignore  CMakeLists.txt  IMPROVEMENT.md  README.md
.claude/projects/D--Work-dodge-ball/memory/: MEMORY.md  feedback_retrospective.md  feedback_vcpkg.md  user_background.md
Application/: CMakeLists.txt  README.md
Application/Source/Inc/: App.h  AppDef.h  BallModel.h  EnemyActor.h  EnemyActorController.h  EnemyModel.h  EnemySpawnActor.h  EnemySpawnActorController.h  GameConfig.h  GameOverActorController.h  GameResultActor.h  GameResultActorController.h  GameResultModel.h  MoveBoundModel.h  PlayTimeActorController.h  PlayerActorController.h  PlayerBallController.h  PlayerBallModel.h  PlayerContext.h  PlayerModel.h  TabTextActorController.h  TabTextModel.h  TitleTextModel.h
Application/Source/Inc/Actor/Enemy/: EnemyActor.h  EnemyActorController.h  EnemyModel.h  EnemySpawnActorController.h  EnemySpawnActorModel.h
Application/Source/Inc/Actor/Player/: PlayerActor.h  PlayerActorController.h
Application/Source/Inc/Actor/UI/: EffectTextActor.h  EffectTextActorController.h  EffectTextModel.h  (+8 more)
Application/Source/Inc/App/: App.h  AppDef.h
Application/Source/Inc/Config/: GameConfig.h
Application/Source/Inc/Context/: PlayerContext.h
Application/Source/Inc/Scene/: TitleScene.h
Application/Source/Src/: App.cpp  BallModel.cpp  EnemyActor.cpp  EnemyActorController.cpp  EnemySpawnActor.cpp  EnemySpawnActorController.cpp  EnemySpawnActorModel.cpp  GameConfig.cpp  GameOverActor.cpp  GameOverActorController.cpp  GameResultActor.cpp  GameResultActorController.cpp  GameScene.cpp  Main.cpp  PlayTimeActor.cpp  PlayTimeActorController.cpp  PlayerActor.cpp  PlayerActorController.cpp  PlayerBallActor.cpp  PlayerBallController.cpp  PlayerBallModel.cpp  TabTextActor.cpp  TabTextActorController.cpp  TitleActor.cpp  TitleActorController.cpp  TitleScene.cpp
Application/Source/Src/App/: App.cpp  Main.cpp
Application/Source/Src/Config/: GameConfig.cpp
Application/Source/Src/Context/: PlayerContext.cpp
Application/Source/Src/Scene/: GameScene.cpp  TitleScene.cpp
CSV/: Ball.csv  Enemy.csv  Player.csv
Config/: GameConfig.yaml
DataPack/: CMakeLists.txt
DataPack/DataChunkGenerator/: CMakeLists.txt
DataPack/DataChunkGenerator/Source/Inc/: DataPackUtils.h  EnemyDataPackParser.generated.h  PlayerDataPackParser.generated.h
DataPack/DataChunkGenerator/Source/Src/: DataPackUtils.cpp  Main.cpp
DataPack/DataPack/: CMakeLists.txt
DataPack/DataPack/Source/: BallDataChunk.h  EnemyDataChunk.h  EnemyDataPack.generated.h  IDataChunk.h  PlayerDataChunk.h  PlayerDataPack.generated.h  TestDataChunk.h
DataPack/DataPackGenerator/: CMakeLists.txt
DataPack/DataPackGenerator/Source/Inc/: TestDataPackParser.generated.h
DataPack/DataPackGenerator/Source/Src/: Main.cpp
DataPackGenerator/: CMakeLists.txt
DataPackGenerator/Source/Inc/: DataPackUtils.h
DataPackGenerator/Source/Src/: DataPackUtils.cpp
Engine/: CMakeLists.txt
Engine/Source/Inc/: Error.h
Engine/Source/Inc/Actor/: IActor.h
Engine/Source/Inc/Manager/: ActorManager.h  ConfigManager.h  DataChunkManager.h
Engine/Source/Src/App/: AppHost.cpp
Engine/Source/Src/Manager/: ActorManager.cpp  ConfigManager.cpp
Framework/: CMakeLists.txt  README.md
Framework/Source/Inc/: AppContext.h  Error.h
Framework/Source/Inc/Actor/: IActor.h  IActorController.h
Framework/Source/Inc/App/: AppContext.h  AppHost.h  IApp.h
Framework/Source/Inc/Config/: IConfig.h
Framework/Source/Inc/Context/: IContext.h
Framework/Source/Inc/Error/: Error.h
Framework/Source/Inc/Event/: Event.h
Framework/Source/Inc/Locator/: ManagerLocator.h
Framework/Source/Inc/Manager/: ActorManager.h  ConfigManager.h  ContextManager.h  DataChunkManager.h  IManager.h  InputManager.h  PhysicManager.h  RenderManager.h  SceneManager.h
Framework/Source/Inc/Particle/: Particle.h  ParticleActor.h  ParticleActorController.h  ParticleModel.h
Framework/Source/Inc/Physic/: CollidableModel.h  CollisionBound.h
Framework/Source/Inc/Render/: IRenderableModel.h  ParticleModel.h
Framework/Source/Inc/Scene/: IScene.h
Framework/Source/Inc/Text/: TextActor.h  TextModel.h
Framework/Source/Src/: AppContext.cpp  AppHost.cpp  InputManager.cpp
Framework/Source/Src/App/: AppContext.cpp  AppHost.cpp
Framework/Source/Src/Config/: CoreConfig.cpp
Framework/Source/Src/Locator/: ManagerLocator.cpp
Framework/Source/Src/Manager/: ActorManager.cpp  ConfigManager.cpp  ContextManager.cpp  DataChunkManager.cpp  InputManager.cpp  PhysicManager.cpp  RenderManager.cpp  SceneManager.cpp
Framework/Source/Src/Particle/: ParticleActor.cpp  ParticleActorController.cpp  ParticleModel.cpp
Framework/Source/Src/Physic/: CollidableModel.cpp  CollisionBound.cpp
Framework/Source/Src/Render/: ParticleModel.cpp
Framework/Source/Src/Text/: TextActor.cpp
Resource/: Ball.bytes  Enemy.bytes  Player.bytes
Sandbox/: CMakeLists.txt
Sandbox/Source/Src/: App.cpp
Tool/Batch/: BuildSolution.bat  ConvertXLSXToCSV.bat  ConvertXLSXsToCSVs.bat  GenerateDataChunk.bat
Tool/Script/: cli.py  cmake_executor.py  cmake_helper.py  config.py  data_pack_generator.py  data_pack_header_generator.py  xlsx_to_csv_converter.py
XLSX/: Ball.xlsx  Enemy.xlsx  Player.xlsx
(+19 files in other folders)
