cmake_minimum_required(VERSION 3.30.3)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SANDBOX_PROJECT_NAME "Sandbox")
set(SANDBOX_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(SANDBOX_SOURCE_PATH "${SANDBOX_PROJECT_PATH}/Source")
set(SANDBOX_PROJECT_HEADER_FILE_PATH "${SANDBOX_SOURCE_PATH}/Inc")
set(SANDBOX_PROJECT_SOURCE_FILE_PATH "${SANDBOX_SOURCE_PATH}/Src")

file(GLOB_RECURSE SANDBOX_SOURCE "${SANDBOX_SOURCE_PATH}/**")
file(GLOB_RECURSE SANDBOX_HEADER_FILE "${SANDBOX_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE SANDBOX_SOURCE_FILE "${SANDBOX_PROJECT_SOURCE_FILE_PATH}/**")

add_executable(${SANDBOX_PROJECT_NAME} ${SANDBOX_SOURCE} ${SANDBOX_HEADER_FILE} ${SANDBOX_SOURCE_FILE})

target_include_directories(${SANDBOX_PROJECT_NAME} PUBLIC ${SANDBOX_PROJECT_HEADER_FILE_PATH} ${SANDBOX_PROJECT_SOURCE_FILE_PATH})
set_target_properties(${SANDBOX_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
target_link_libraries(${SANDBOX_PROJECT_NAME} PUBLIC Framework DataPack)
target_compile_definitions(
    ${SANDBOX_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${SANDBOX_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${SANDBOX_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

source_group(TREE "${SANDBOX_SOURCE_PATH}" PREFIX "Source" FILES ${SANDBOX_SOURCE})
source_group(TREE "${SANDBOX_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${SANDBOX_HEADER_FILE})
source_group(TREE "${SANDBOX_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${SANDBOX_SOURCE_FILE})