cmake_minimum_required(VERSION 3.30.3)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(DATA_CHUNK_GENERATOR_PROJECT_NAME "DataChunkGenerator")
set(DATA_CHUNK_GENERATOR_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(DATA_CHUNK_GENERATOR_SOURCE_PATH "${DATA_CHUNK_GENERATOR_PROJECT_PATH}/Source")
set(DATA_CHUNK_GENERATOR_PROJECT_HEADER_FILE_PATH "${DATA_CHUNK_GENERATOR_SOURCE_PATH}/Inc")
set(DATA_CHUNK_GENERATOR_PROJECT_SOURCE_FILE_PATH "${DATA_CHUNK_GENERATOR_SOURCE_PATH}/Src")

file(GLOB_RECURSE DATA_CHUNK_GENERATOR_SOURCE "${DATA_CHUNK_GENERATOR_SOURCE_PATH}/**")
file(GLOB_RECURSE DATA_CHUNK_GENERATOR_HEADER_FILE "${DATA_CHUNK_GENERATOR_PROJECT_HEADER_FILE_PATH}/**")
file(GLOB_RECURSE DATA_CHUNK_GENERATOR_SOURCE_FILE "${DATA_CHUNK_GENERATOR_PROJECT_SOURCE_FILE_PATH}/**")

add_executable(${DATA_CHUNK_GENERATOR_PROJECT_NAME} ${DATA_CHUNK_GENERATOR_SOURCE} ${DATA_CHUNK_GENERATOR_HEADER_FILE} ${DATA_CHUNK_GENERATOR_SOURCE_FILE})

target_include_directories(${DATA_CHUNK_GENERATOR_PROJECT_NAME} PUBLIC ${DATA_CHUNK_GENERATOR_PROJECT_HEADER_FILE_PATH} ${DATA_CHUNK_GENERATOR_PROJECT_SOURCE_FILE_PATH})
target_link_libraries(${DATA_CHUNK_GENERATOR_PROJECT_NAME} PUBLIC DataPack csv)
target_compile_definitions(
    ${DATA_CHUNK_GENERATOR_PROJECT_NAME}
    PUBLIC
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${DATA_CHUNK_GENERATOR_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET ${DATA_CHUNK_GENERATOR_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

source_group(TREE "${DATA_CHUNK_GENERATOR_SOURCE_PATH}" PREFIX "Source" FILES ${DATA_CHUNK_GENERATOR_SOURCE})
source_group(TREE "${DATA_CHUNK_GENERATOR_PROJECT_HEADER_FILE_PATH}" PREFIX "Source/Inc" FILES ${DATA_CHUNK_GENERATOR_HEADER_FILE})
source_group(TREE "${DATA_CHUNK_GENERATOR_PROJECT_SOURCE_FILE_PATH}" PREFIX "Source/Src" FILES ${DATA_CHUNK_GENERATOR_SOURCE_FILE})