cmake_minimum_required(VERSION 3.30.3)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(DATA_PACK_PROJECT_NAME "DataPack")
set(DATA_PACK_PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(DATA_PACK_SOURCE_PATH "${DATA_PACK_PROJECT_PATH}/Source")
file(GLOB_RECURSE DATA_PACK_SOURCE "${DATA_PACK_SOURCE_PATH}/**")

add_library(${DATA_PACK_PROJECT_NAME} INTERFACE ${DATA_PACK_SOURCE})

target_include_directories(${DATA_PACK_PROJECT_NAME} INTERFACE ${DATA_PACK_SOURCE_PATH})
set_target_properties(${DATA_PACK_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
target_link_libraries(${DATA_PACK_PROJECT_NAME} INTERFACE msgpack-cxx)
target_compile_definitions(
    ${DATA_PACK_PROJECT_NAME}
    INTERFACE
    $<$<CONFIG:Debug>:DEBUG_MODE>
    $<$<CONFIG:Release>:RELEASE_MODE>
    $<$<CONFIG:RelWithDebInfo>:REL_WITH_DEB_INFO_MODE>
    $<$<CONFIG:MinSizeRel>:MINSIZE_REL_MODE>
)

set_property(TARGET ${DATA_PACK_PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")

source_group(TREE "${DATA_PACK_SOURCE_PATH}" PREFIX "Source" FILES ${DATA_PACK_SOURCE})